--- a/index.html
+++ b/index.html
@@ -3,18 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>campus-whisper-guardian</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Shhh - WhisperVerse</title>
+    <meta name="description" content="Anonymous, emotionally intelligent campus social platform with 3D immersive design" />
+    <meta name="author" content="CUJ Community" />
 
-    <meta property="og:title" content="campus-whisper-guardian" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#9333ea" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Shhh" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Shhh - WhisperVerse" />
+    <meta property="og:description" content="Anonymous, emotionally intelligent campus social platform with 3D immersive design" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icon-512.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Shhh - WhisperVerse" />
+    <meta name="twitter:description" content="Anonymous, emotionally intelligent campus social platform" />
+    <meta name="twitter:image" content="/icon-512.png" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
   </head>
 
   <body>
