--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
 <!-- Icons -->
 <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
-<link rel="apple-touch-icon" href="/icon-512.png" />
-<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" href="/icons/icon-192.png" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
 <!-- SEO -->
 <meta
