--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <meta name="apple-mobile-web-app-title" content="Shhh - WhisperVerse" />
+<meta name="mobile-web-app-capable" content="yes">
 
 <!-- Icons -->
 <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
