--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!-- Manifest & App Info -->
 <link rel="manifest" href="/manifest.json" />
 <meta name="theme-color" content="#0f172a" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <meta name="apple-mobile-web-app-title" content="Shhh - WhisperVerse" />
 <meta name="mobile-web-app-capable" content="yes">
 
 <!-- Icons -->
-<link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
 <link rel="apple-touch-icon" href="/icons/icon-192.png" />
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
@@ -17,6 +16,6 @@
   content="Shhh is a poetic, anonymous student network to share whispers, feelings, and rituals within campus."
 />
 <meta property="og:title" content="Shhh – WhisperVerse" />
-<meta property="og:image" content="/icon-512.png" />
+<meta property="og:image" content="/icons/icon-512.png" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shhh-app.vercel.app" />
