--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!-- Manifest & App Info -->
 <link rel="manifest" href="/manifest.json" />
-<meta name="theme-color" content="#0f172a" />
+<meta name="theme-color" content="#0ea5e9" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <meta name="apple-mobile-web-app-title" content="Shhh - WhisperVerse" />
 <meta name="mobile-web-app-capable" content="yes">
