--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <!-- Icons -->
 <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
 <link rel="apple-touch-icon" href="/icons/icon-192.png" />
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
 <!-- SEO -->
 <meta
