--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shhh - WhisperVerse</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Shhh - WhisperVerse | Anonymous Campus Social Platform</title>
     <meta
       name="description"
-      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design"
+      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design. Connect, share, and engage with your campus community."
     />
     <meta name="author" content="CUJ Community" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://yourdomain.com" />
+    <meta name="keywords" content="campus social network, anonymous chat, college community, student platform, CUJ" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
@@ -18,16 +22,47 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Shhh" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Shhh - WhisperVerse" />
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/fonts/your-main-font.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:title" content="Shhh - WhisperVerse | Anonymous Campus Social Platform" />
     <meta
       property="og:description"
-      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design"
+      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design. Connect, share, and engage with your campus community."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Shhh - WhisperVerse" />
+    <meta property="og:site_name" content="Shhh - WhisperVerse" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@yourtwitter" />
+    <meta name="twitter:creator" content="@yourtwitter" />
+    <meta name="twitter:title" content="Shhh - WhisperVerse | Anonymous Campus Social Platform" />
+    <meta 
+      name="twitter:description" 
+      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design." 
+    />
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-card.jpg" />
+
+    <!-- Additional Performance Optimizations -->
+    <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="DENY" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+    
+    <!-- Preload critical CSS -->
+    <link rel="preload" href="/src/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link rel="stylesheet" href="/src/index.css" /></noscript>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Shhh - WhisperVerse" />
     <meta
