--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Shhh - WhisperVerse | Anonymous Campus Social Platform</title>
+    <title>Aangan | Real-time Emotionally Intelligent Campus Platform</title>
     <meta
       name="description"
-      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design. Connect, share, and engage with your campus community."
+      content="Aangan is a real-time, emotionally intelligent campus platform that enables anonymous, meaningful connections within your academic community."
     />
-    <meta name="author" content="CUJ Community" />
+    <meta name="author" content="Aangan Team" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://yourdomain.com" />
-    <meta name="keywords" content="campus social network, anonymous chat, college community, student platform, CUJ" />
+    <link rel="canonical" href="https://aangan.app" />
+    <meta name="keywords" content="campus social network, anonymous chat, college community, student platform, emotional intelligence, campus connect" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
@@ -31,27 +31,27 @@
     <meta property="og:title" content="Shhh - WhisperVerse | Anonymous Campus Social Platform" />
     <meta
       property="og:description"
-      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design. Connect, share, and engage with your campus community."
+      content="A real-time, emotionally intelligent campus platform for anonymous expression and connection."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com" />
-    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+    <meta property="og:url" content="https://aangan.app" />
+    <meta property="og:image" content="https://aangan.app/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Shhh - WhisperVerse" />
-    <meta property="og:site_name" content="Shhh - WhisperVerse" />
+    <meta property="og:image:alt" content="Aangan" />
+    <meta property="og:site_name" content="Aangan" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yourtwitter" />
     <meta name="twitter:creator" content="@yourtwitter" />
-    <meta name="twitter:title" content="Shhh - WhisperVerse | Anonymous Campus Social Platform" />
-    <meta 
-      name="twitter:description" 
-      content="Anonymous, emotionally intelligent campus social platform with 3D immersive design." 
+    <meta name="twitter:title" content="Aangan | Real-time Campus Platform" />
+    <meta
+      name="twitter:description"
+      content="A real-time, emotionally intelligent campus platform for anonymous expression and connection."
     />
-    <meta name="twitter:image" content="https://yourdomain.com/twitter-card.jpg" />
+    <meta name="twitter:image" content="https://aangan.app/twitter-card.jpg" />
 
     <!-- Additional Performance Optimizations -->
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width" />
